// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCmd change command can become a start command by having start as a trailing word 1`] = `
{
  "_id": "field:2023-12-21T14:00:00.000Z",
  "_rev": Any<String>,
  "data": {
    "dur": "PT30M",
    "field": "field",
    "lastState": null,
    "occurTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "opt1": "optVal",
    "req1": "reqVal",
    "state": true,
  },
  "meta": {
    "createTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "humanId": "elfuv1633zeysuyhc0l9ss",
    "idStructure": "%field%:%occurTime%",
    "modifyTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
  },
}
`;

exports[`addCmd change command can become a switch command by having start as a trailing word 1`] = `
{
  "_id": "field:2023-12-21T14:00:00.000Z",
  "_rev": Any<String>,
  "data": {
    "dur": "PT5M30S",
    "field": "field",
    "lastState": null,
    "occurTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "opt1": "optVal",
    "req1": "reqVal",
    "state": "stateName",
  },
  "meta": {
    "createTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "humanId": "elfuv1633zeysuyhc0l9ss",
    "idStructure": "%field%:%occurTime%",
    "modifyTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
  },
}
`;

exports[`addCmd change command can become an end command by having start as a trailing word 1`] = `
{
  "_id": "field:2023-12-21T14:00:00.000Z",
  "_rev": Any<String>,
  "data": {
    "dur": "PT30M",
    "field": "field",
    "lastState": null,
    "occurTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "opt1": "optVal",
    "req1": "reqVal",
    "state": false,
  },
  "meta": {
    "createTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "humanId": "elfuv1633zeysuyhc0l9ss",
    "idStructure": "%field%:%occurTime%",
    "modifyTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
  },
}
`;

exports[`addCmd change command can become an occur command by having start as a trailing word 1`] = `
{
  "_id": "field:2023-12-21T14:00:00.000Z",
  "_rev": Any<String>,
  "data": {
    "dur": null,
    "field": "field",
    "lastState": null,
    "occurTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "opt1": "optVal",
    "req1": "reqVal",
  },
  "meta": {
    "createTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
    "humanId": "elfuv1633zeysuyhc0l9ss",
    "idStructure": "%field%:%occurTime%",
    "modifyTime": {
      "o": 0,
      "tz": "UTC",
      "utc": "2023-12-21T14:00:00.000Z",
    },
  },
}
`;
